[fix][menu] Display mobile logo on small screens

--- a/app/assets/stylesheets/application_redesign.css.scss
+++ b/app/assets/stylesheets/application_redesign.css.scss
@@ -37,6 +37,9 @@
 
 @import 'redesign/checkout';
 
+.mobile-logo {
+  margin-top:-3px;
+}
 
 .standard-form {
   height: 60px;
